update on ncbtmb page

--- a/components/ForgetPassword/ForgetPassword.module.css
+++ b/components/ForgetPassword/ForgetPassword.module.css
@@ -1,9 +1,8 @@
 .modelOpen {
 
     opacity: 1;
-    transition: all ease-in-out 1s;
-    transition: all ease-in-out 1s;
-    animation: passwordShow 1s ease-in-out forwards;
+    transition: all ease-in-out 500ms;
+    animation: passwordShow 500ms linear forwards;
 
 }
 
@@ -13,14 +12,16 @@
 
 
         visibility: hidden;
-        width: 0%;
-        height: 0%;
+        opacity: 0;
+
     }
 
     to {
 
 
         visibility: visible;
+        opacity: 1;
+
 
     }
 }
@@ -28,8 +29,8 @@
 .modelClose {
 
 
-    transition: all ease-in-out 1s;
-    animation: passwordHide 1s ease-in-out forwards;
+    transition: all ease-in-out 500ms;
+    animation: passwordHide 500ms linear forwards;
 
 }
 
@@ -38,17 +39,17 @@
 
     form {
 
-
+        opacity: 1;
+        z-index: 100;
         visibility: visible;
 
     }
 
     to {
-
-
+        opacity: 0;
+        z-index: 0;
         visibility: hidden;
-        width: 0%;
-        height: 0%;
+
     }
 }
 
@@ -59,6 +60,6 @@
 
     opacity: 0;
     display: none;
-    transition: all 1s ease-in-out;
+    transition: all 3s ease-in-out;
 
 }
