--- a/src/styles/Ncbtmb.module.css
+++ b/src/styles/Ncbtmb.module.css
@@ -18,3 +18,24 @@
 
     opacity: 0;
 }
+
+
+
+
+@media screen and (max-height:700px) and (max-height:650px) {
+
+
+    .ncbtapproved h2 {
+
+        font-size: 40px;
+        line-height: 3rem;
+
+    }
+
+    .ncbtapproved img {
+
+        width: 230px;
+        height: 230px
+    }
+
+}
