--- a/src/styles/Ncbtmb.module.css
+++ b/src/styles/Ncbtmb.module.css
@@ -22,20 +22,47 @@
 
 
 
-@media screen and (max-height:700px) and (max-height:650px) {
+@media screen and (max-height:768px) {
 
 
     .ncbtapproved h2 {
 
-        font-size: 40px;
+        font-size: 48px;
         line-height: 3rem;
 
     }
 
     .ncbtapproved img {
 
-        width: 230px;
-        height: 230px
+        width: 300px;
+        height: 250px
     }
+
+
+
+
+
+}
+
+
+@media screen and (min-height:768px) {
+
+
+    .ncbtapproved h2 {
+
+        font-size: 61px;
+        line-height: 4.5rem;
+
+    }
+
+    .ncbtapproved img {
+
+        width: 323px;
+        height: 323px
+    }
+
+
+
+
 
 }
