--- a/src/styles/NewIndex.module.css
+++ b/src/styles/NewIndex.module.css
@@ -1,3 +1,32 @@
+.gridMain {
+
+    transition: all ease-in-out 2s;
+    animation: transformUp 1s ease-in-out forwards;
+    position: relative;
+
+
+}
+
+
+@keyframes transformUp {
+
+    from {
+        top: 100px;
+        opacity: 0;
+
+    }
+
+    to {
+
+        top: 0;
+        opacity: 1;
+    }
+}
+
+
+
+
+
 .parentchildon {
     animation-name: animateparenton;
     animation-fill-mode: forwards;
@@ -804,4 +833,85 @@ screen and (max-height: 700px) {
         transform: scale(1.2);
 
     }
+}
+
+/* i wanna a tech css  */
+
+.modelOpen {
+
+    opacity: 1;
+    transition: all linear 1s;
+    animation: passwordShow 1s linear forwards;
+
+}
+
+@keyframes passwordShow {
+
+    form {
+
+
+        visibility: hidden;
+        opacity: 0;
+
+    }
+
+    to {
+
+
+        visibility: visible;
+        opacity: 1;
+
+
+    }
+}
+
+.modelClose {
+
+
+    transition: all linear 1s;
+    animation: passwordHide 1s linear forwards;
+
+}
+
+
+@keyframes passwordHide {
+
+    form {
+
+        opacity: 1;
+        z-index: 100;
+        visibility: visible;
+
+    }
+
+    to {
+        opacity: 0;
+        z-index: 0;
+        visibility: hidden;
+
+    }
+}
+
+/* teacher login true and teacher false  */
+
+
+
+
+.teacherLoungTrue {
+
+    background-image: url('/images/teacherLoungeBg.png');
+    transition: all ease-in-out 1s;
+
+
+}
+
+
+
+
+.teacherLoungFalse {
+
+    background-image: url('/images/bg-image.png');
+    transition: all ease-in-out 1s;
+
+
 }
