--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -332,3 +332,9 @@ select:focus {
   box-shadow: 0 0 1px 2px #6db4ff;
   outline: none;
 } */
+
+
+.instructorBorder {
+
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
