--- a/src/styles/MenuComponent.module.css
+++ b/src/styles/MenuComponent.module.css
@@ -124,6 +124,7 @@
     -o-transition: background-image 1s ease-in-out;
     transition: background-image 1s ease-in-out;
 
+
 }
 
 
@@ -137,6 +138,7 @@
     -moz-transition: background-image 1s ease-in-out;
     -o-transition: background-image 1s ease-in-out;
     transition: background-image 1s ease-in-out;
+    transition-delay: 10ms;
 }
 
 
@@ -169,6 +171,7 @@
     -moz-transition: background-image 1s ease-in-out;
     -o-transition: background-image 1s ease-in-out;
     transition: background-image 1s ease-in-out;
+    transition-delay: 10ms;
 
 }
 
@@ -182,6 +185,7 @@
     -moz-transition: background-image 1s ease-in-out;
     -o-transition: background-image 1s ease-in-out;
     transition: background-image 1s ease-in-out;
+    transition-delay: 10ms;
 
 }
 
@@ -201,6 +205,7 @@
     -moz-transition: all 1s ease-in-out;
     -o-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out;
+    transition-delay: 10ms;
 }
 
 
