--- a/src/styles/MenuComponent.module.css
+++ b/src/styles/MenuComponent.module.css
@@ -445,3 +445,28 @@
         opacity: 1;
     }
 }
+
+
+.scaleEnter {
+    transform: translateY(-100%);
+    opacity: .01;
+}
+
+.scaleEnterActive {
+    transform: translateY(0%);
+    opacity: 1;
+    transition: all 1000ms ease-in-out;
+
+}
+
+.scalLeave {
+    transform: translateY(0);
+    opacity: 1;
+
+}
+
+.scaleLeaveActive {
+    transform: translateY(-100%);
+    opacity: 0.00;
+    transition: all 1000ms ease-in-out;
+}
