--- a/components/IwannaTech/IwanntTech.module.css
+++ b/components/IwannaTech/IwanntTech.module.css
@@ -74,7 +74,7 @@
     }
 
     100% {
-        transform: rotate(-20deg);
+        transform: rotate(-6.28deg);
     }
 }
 
@@ -84,7 +84,7 @@
     }
 
     100% {
-        transform: rotate(-20deg);
+        transform: rotate(-6.28deg);
     }
 }
 
@@ -202,4 +202,41 @@
     }
 
 
+}
+
+/* rottate animation overflow */
+
+.rotatebgImg {
+
+    transform: rotate(-30.28deg);
+
+
+}
+
+
+
+.aboutMain {
+
+    animation-name: aboutShow;
+    animation-fill-mode: forwards;
+    animation-timing-function: linear;
+    animation-duration: 3s;
+    transition: all ease-in-out 3s;
+
+
+
+}
+
+
+@keyframes aboutShow {
+    from {
+
+        opacity: 0;
+
+    }
+
+    to {
+
+        opacity: 1;
+    }
 }
