--- a/src/styles/MenuComponent.module.css
+++ b/src/styles/MenuComponent.module.css
@@ -447,10 +447,10 @@
 }
 
 
-.scaleEnter {
+/* .scaleEnter {
     transform: translateY(-100%);
     opacity: .01;
-}
+} */
 
 .scaleEnterActive {
     transform: translateY(0%);
@@ -459,14 +459,14 @@
 
 }
 
-.scalLeave {
+/* .scalLeave {
     transform: translateY(0);
     opacity: 1;
 
-}
+} */
 
 .scaleLeaveActive {
-    transform: translateY(-100%);
-    opacity: 0.00;
+    /* transform: translateY(100%); */
+    opacity: 0;
     transition: all 1000ms ease-in-out;
 }
