--- a/src/styles/MenuComponent.module.css
+++ b/src/styles/MenuComponent.module.css
@@ -309,7 +309,7 @@
 .shadowHover:hover {
 
     filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.3));
-    transform: scale(1.2);
+    font-size: 20px;
     transition: all ease-in-out 500ms;
 }
 
@@ -457,7 +457,7 @@
 screen and (max-height: 700px) {
     .transformTopBottomIndicater {
 
-        margin-top: 393px;
+        margin-top: 339px;
 
     }
 }
