--- a/components/IwannaTech/IwanntTech.module.css
+++ b/components/IwannaTech/IwanntTech.module.css
@@ -89,30 +89,30 @@
 
 /* .imgRotateNowWhat {
 
-    animation: nowwhatMain alternate 2s ease-in-out infinite alternate;
-    transition: all ease-in-out 2s;
-}
-
-
-@keyframes nowwhatMain {
-    from {
-
-
-        transform: rotate(-6.28deg);
+        animation: nowwhatMain alternate 2s ease-in-out infinite alternate;
+        transition: all ease-in-out 2s;
     }
 
-    to {
-        transform: rotate(0deg);
 
-    }
-
-} */
+    @keyframes nowwhatMain {
+        from {
 
 
-/* .imgRotateNowWhat {
+            transform: rotate(-6.28deg);
+        }
+
+        to {
+            transform: rotate(0deg);
+
+        }
+
+    } */
+
+
+.imgRotateNowWhat {
     animation: nowwhat 2s infinite alternate;
     overflow: hidden;
-} */
+}
 
 
 
@@ -373,4 +373,29 @@
         top: 21.2%;
 
     }
+}
+
+.container {
+
+
+    background: transparent !important;
+}
+
+
+.container .box {
+
+    position: relative;
+    width: 350px;
+    height: 350px;
+}
+
+
+.container .box img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    mix-blend-mode: normal;
 }
