--- a/components/IwannaTech/IwanntTech.module.css
+++ b/components/IwannaTech/IwanntTech.module.css
@@ -65,6 +65,17 @@
     overflow: hidden;
 }
 
+/* @keyframes animateRotate {
+    0% {
+        transform: rotate(35deg);
+    }
+
+    100% {
+        transform: rotate(27deg);
+    }
+} */
+
+
 /* @-webkit-keyframes animateRotate {
     0% {
         transform: rotate(7.12deg);
@@ -326,76 +337,3 @@
 
 
 /* responsive for desktop   */
-
-
-@media only screen and (max-width: 1310px) {
-
-    .bgcoverbottom {
-        position: absolute;
-        transform: rotate(-23.2deg);
-        top: 26.2%;
-
-    }
-
-    .bgcoverbottomWhyUs {
-        position: absolute;
-        transform: rotate(-27.2deg);
-        top: 28.9%;
-
-    }
-
-    .bgcoverbottomGetStarted {
-        position: absolute;
-        transform: rotate(-29.2deg);
-        top: 28.2%;
-    }
-
-    .bgMainGetStarted {
-
-        position: absolute;
-        top: 2%;
-    }
-
-    .bgcoverbottomWhyYou {
-
-        position: absolute;
-        transform: rotate(-29.2deg);
-        top: 28.2%;
-    }
-}
-
-
-@media only screen and (max-width: 1100px) {
-
-    .bgcoverbottom {
-        position: absolute;
-        transform: rotate(-23.2deg);
-        top: 21.2%;
-
-    }
-}
-
-.container {
-
-
-    background: transparent !important;
-}
-
-
-.container .box {
-
-    position: relative;
-    width: 350px;
-    height: 350px;
-}
-
-
-.container .box img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    mix-blend-mode: normal;
-}
