--- a/src/styles/Ncbtmb.module.css
+++ b/src/styles/Ncbtmb.module.css
@@ -25,12 +25,12 @@
 @media screen and (max-height:768px) {
 
 
-    .ncbtapproved h2 {
+    /* .ncbtapproved h2 {
 
         font-size: 48px;
         line-height: 3rem;
 
-    }
+    } */
 
     .ncbtapproved img {
 
