working home page responsive for extra larg screen

--- a/src/styles/NewIndex.module.css
+++ b/src/styles/NewIndex.module.css
@@ -522,6 +522,75 @@ screen and (max-height: 700px) {
 
 }
 
+@media only screen and (min-width:1921px) {
+
+    .modelScaleUpAnimation {
+
+        animation-name: modelScaleUp;
+        animation-fill-mode: forwards;
+        animation-duration: 500ms;
+        animation-timing-function: linear;
+    }
+
+
+    @keyframes modelScaleUp {
+
+        0% {
+            padding: 25px 25px 25px 25px;
+            width: 600px
+        }
+
+        25% {
+            padding: 25px 26px 25px 26px;
+            width: 650px
+        }
+
+        60% {
+            padding: 25px 28px 25px 28px;
+            width: 670px
+        }
+
+        100% {
+            padding: 25px 30px 25px 30px;
+            width: 690px
+        }
+
+    }
+
+
+    .modelScaleDownAnimation {
+
+        animation-name: modelScaleDown;
+        animation-fill-mode: forwards;
+        animation-duration: 500ms;
+        animation-timing-function: linear;
+    }
+
+
+    @keyframes modelScaleDown {
+
+        0% {
+            padding: 25px 30px 25px 30px;
+            width: 690px
+        }
+
+        25% {
+            padding: 25px 28px 25px 28px;
+            width: 670px
+        }
+
+        60% {
+            padding: 25px 26px 25px 26px;
+            width: 650px
+        }
+
+        100% {
+            padding: 25px 25px 25px 25px;
+            width: 600px
+        }
+
+    }
+}
 
 /* card animation  */
 
