--- a/components/TeacherLounge/TeacherLounge.module.css
+++ b/components/TeacherLounge/TeacherLounge.module.css
@@ -129,8 +129,6 @@ screen and (max-height: 700px) {
 
 }
 
-
-
 @keyframes ModelClose {
 
 
@@ -174,6 +172,101 @@ screen and (max-height: 700px) {
 
 }
 
+/* media query for extra large device */
+
+
+@media only screen and (min-width:1921px) {
+
+
+    .openModel {
+
+        animation: ModelOpen 500ms ease forwards;
+        transition: all ease-in-out 1s;
+        display: block;
+        position: absolute;
+
+
+    }
+
+
+
+    @keyframes ModelOpen {
+
+
+        0% {
+
+            bottom: 0;
+            right: 0;
+            opacity: 0;
+            width: 350px;
+        }
+
+
+        100% {
+
+            bottom: 30%;
+            right: 50%;
+
+            opacity: 1;
+            width: 600px;
+        }
+    }
+
+    .closeModel {
+
+        animation: ModelClose 500ms linear forwards;
+        transition: all ease-in-out 500ms;
+        position: absolute;
+        z-index: 0;
+
+
+
+    }
+
+    @keyframes ModelClose {
+
+
+        0% {
+
+            bottom: 30%;
+            right: 50%;
+            visibility: visible;
+            opacity: 1;
+            width: 600px;
+
+
+
+        }
+
+
+
+        99% {
+            bottom: 0px;
+            right: 0px;
+            opacity: 0;
+            visibility: hidden;
+            transform: none;
+            width: 450px;
+
+        }
+
+        100% {
+            bottom: 0px;
+            right: 0px;
+            opacity: 0;
+            visibility: hidden;
+            transform: none;
+            width: 0px;
+            height: 0;
+
+        }
+
+
+
+
+    }
+
+}
 
 .mainDivHide {
 
