--- a/src/styles/Ncbtmb.module.css
+++ b/src/styles/Ncbtmb.module.css
@@ -60,9 +60,31 @@
         width: 323px;
         height: 323px
     }
+}
 
 
+@media screen and (min-width:1921px) {
 
+
+    .ncbtapproved h2 {
+
+        font-size: 80px;
+        line-height: 4.5rem;
+
+    }
+
+    .ncbtapproved img {
+
+        width: 323px;
+        height: 323px
+    }
+
+
+    .ncbtapproved img {
+
+        width: 400px;
+        height: 400px
+    }
 
 
 }
